11-kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wcg
spec:
  selector:
    matchLabels:
      app: wcg
  template:
    metadata:
      labels:
        app: wcg
    spec:
      containers:
        - name: wcg
            image: ghcr.io/owl-sarge/wcg:latest
            imagePullPolicy: Always
            ports:
              - containerPort: 8888
