11-kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wcg-service
spec:
  selector:
    app: wcg
  ports:
  - port: 80
    targetPort: 8888
