11-kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wcg-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: wcg-local.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wcg-service
            port: 
              number: 80
